plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'io.github.ladysnake.chenille' version "${chenille_version}"
}

version = project.mod_version
group = project.maven_group

chenille {
    customLicense = rootProject.file("LICENSE")
    github = new URL("https://github.com/MoriyaShiine/enchancement")
    javaVersion = 25
    configurePublishing {
        withLadysnakeMaven()
        withGithubRelease()
        withModrinthRelease()
        withCurseforgeRelease()
    }
}

loom {
    accessWidenerPath = file("src/main/resources/enchancement.classtweaker")
}

fabricApi {
    configureDataGeneration() {
        client = true
        modId = project.archives_base_name
    }
}

repositories {
    chenille.repositories.ladysnake()
    chenille.repositories.up()
    chenille.repositories.terraformers()
    chenille.repositories.modrinth()
    maven {
        name "appleskin"
        url "https://maven.ryanliptak.com/"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${loader_version}"

    includeApi "org.ladysnake.cardinal-components-api:cardinal-components-block:${cardinal_components_version}"
    includeApi "org.ladysnake.cardinal-components-api:cardinal-components-level:${cardinal_components_version}"
    includeApi "maven.modrinth:midnightlib:${midnightlib_version}"

    implementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
    implementation "moriyashiine:strawberrylib:${strawberrylib_version}"

    compileOnly("squeek.appleskin:appleskin-fabric:${appleskin_version}") {
        transitive = false
    }

    localRuntime "com.terraformersmc:modmenu:${mod_menu_version}"
}

processResources {
    def version = project.version
    inputs.property "version", version

    filesMatching("fabric.mod.json") {
        expand "version": version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    def projectName = project.name
    inputs.property "projectName", projectName

    from("LICENSE") {
        rename { "${it}_$projectName"}
    }
}